--- a/src/main/resources/home.html
+++ b/src/main/resources/home.html
@@ -2,14 +2,210 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Unsplash</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="bootstrap3/css/bt3.css">
     <link rel="stylesheet" type="text/css" href="bootstrap3/font-awesome-4.7.0/css/font-awesome.css"/>
+    <style>
+        header{
+            box-shadow: 0px 3px 14px 0 #aaa;
+            height: 130px;
+        }
+        .navbar{/*导航条相关样式*/
+            background-color: white;
+            border: none;
+        }
+        form>input{/*文本输入框相关样式*/
+            background-color: #f5f5f5;
+            padding: 10px 20px;
+            height: 40px;
+            width: 470px;
+            border-radius: 25px;
+            border: none;
+            position: relative;
+            top: 20px;
+            outline: none;/*去掉点击后的边框*/
+            margin-left: -20px;
+        }
+        form>button{
+            background-color: rgba(0,0,0, 0);
+            border: 0;
+            color: gray;
+            position: relative;
+            top: 20px;
+            right: 40px;
+        }
+        .home{
+            top: 15px;
+        }
+        .submit{
+            top: 8px;
+        }
+        h2{
+            color: #c0c0c0;
+            /*font-weight:lighter;*/
+        }
+        .division{
+            bottom: 15px;
+        }
+        section{
+            margin-top: 0px;
+        }
+        #search{
+            position: absolute;
+            top: 100px;
+            text-align: center;
+
+        }
+        img{
+            cursor: pointer;
+            transition: all 0.6s;
+
+        }
+        img:hover{
+            transform: scale(1.1);
+            position:relative;
+            z-index:100;
+
+        }
+    </style>
 </head>
 <body>
-<h1>哈哈哈哈</h1>
+<!--顶部导航条-->
+<header class="col-md-12">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <ul class="nav navbar-nav underline" >
+                    <li>
+                        <a href="home" class="navbar-brand">
+                            <img src="images/UnsplashLogo.jpg" alt="" width="180px">
+                        </a>
+                    </li>
+                    <li>
+                        <form action="home">
+                            <input type="text" placeholder="Search free high-resolution photos" name="keyword">
+                            <button type="button">
+                                <span class="fa fa-search" ></span>
+                            </button>
+                        </form>
+                    </li>
+                    <li class="home">
+                        <a href="home"><p>Brands</p></a>
+                    </li>
+                    <li class="home">
+                        <a href=""><p>Explore</p></a>
+                    </li>
+                    <li class="home">
+                        <a href=""><i class="fa fa-bars" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="home submit">
+                        <a href="">
+                            <button type="button" class="btn btn-default">Submit a photo</button>
+                        </a>
+                    </li>
+                    <li>
+                            <h2>|</h2>
+                    </li>
+                    <li class="home">
+                        <a href=""><p>Login</p></a>
+                    </li>
+                    <li class="submit">
+                        <a href="">
+                            <button type="button" class="btn btn-success">Join free</button>
+                        </a>
+                    </li>
+                    <!--分类列表-->
+                    <li>
+                        <a href=""><p>Editorial</p></a>
+                    </li>
+                    <li class="division">
+                        <h2>|</h2>
+                    </li>
+                    <li>
+                        <a href=""><p>Wallpapers</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>Nature</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>People</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>Architecture</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>Current Events</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>Business&Work</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>Fashion</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>Film</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>Health&Wellness</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>Interiors</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>Travel</p></a>
+                    </li>
+                    <li>
+                        <a href=""><p>View all</p></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+<section class="col-md-12">
+
+<!--轮播图-->
+<div id="myCarousel" class="carousel slide">
+    <!-- 轮播（Carousel）指标 -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <!-- 轮播（Carousel）项目 -->
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="images/kai.jpg" alt="First slide">
+            <div class="carousel-caption">标题 1</div>
+        </div>
+        <div class="item">
+            <img src="images/kelly.jpg" alt="Second slide">
+            <div class="carousel-caption">标题 2</div>
+        </div>
+        <div class="item">
+            <img src="images/mario.jpg" alt="Third slide">
+            <div class="carousel-caption">标题 3</div>
+        </div>
+    </div>
+    <!-- 轮播（Carousel）导航 -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+    <div class="col-lg-12" id = search>
+        <h1>哈哈哈</h1>
+    </div>
+</section>
+
+
+
 </body>
 <script type="text/javascript" src="bootstrap3/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap3/js/bootstrap.js"></script>
@@ -21,5 +217,12 @@
 <script src="js/masonry.pkgd.min.js"></script>
 <script src="js/imagesloaded.pkgd.js"></script>
 
+<script>
+    $("input:first").hover(function () {//鼠标移入
+        $(this).css("border","1px solid #DCDCDC");
+    },function () {
+        $(this).css("border","none");
+    })
 
+</script>
 </html>
