--- a/src/main/resources/home.html
+++ b/src/main/resources/home.html
@@ -8,15 +8,18 @@
     <link rel="stylesheet" type="text/css" href="bootstrap3/css/bt3.css">
     <link rel="stylesheet" type="text/css" href="bootstrap3/font-awesome-4.7.0/css/font-awesome.css"/>
     <style>
-        header{/*加阴影*/
+
+        header { /*加阴影*/
             box-shadow: 0px 3px 14px 0 #aaa;
             height: 130px;
         }
-        .navbar{/*导航条相关样式*/
+
+        .navbar { /*导航条相关样式*/
             background-color: white;
             border: none;
         }
-        form>input{/*文本输入框相关样式*/
+
+        form > input { /*文本输入框相关样式*/
             background-color: #f5f5f5;
             padding: 10px 20px;
             height: 40px;
@@ -25,55 +28,74 @@
             border: none;
             position: relative;
             top: 20px;
-            outline: none;/*去掉点击后的边框*/
+            outline: none; /*去掉点击后的边框*/
             margin-left: -20px;
         }
-        form>button{/*放大镜搜索按钮*/
-            background-color: rgba(0,0,0, 0);
+
+        form > button { /*放大镜搜索按钮*/
+            background-color: rgba(0, 0, 0, 0);
             border: 0;
             color: gray;
             position: relative;
             top: 20px;
             right: 40px;
         }
-        .home{/*顶部home栏*/
+
+        .home { /*顶部home栏*/
             top: 15px;
         }
-        .submit{/*submit按钮*/
+
+        .submit { /*submit按钮*/
             top: 8px;
         }
-        h2{
+
+        h2 {
             color: #c0c0c0;
             /*font-weight:lighter;*/
         }
-        .division{
+
+        .division {
             bottom: 15px;
         }
-        section{
+
+        section {
             margin-top: 0px;
         }
-        #search{
+
+        #search { /*搜索*/
             position: absolute;
-            top: 200px;
-            left: 450px;
+            top: 10%;
+            left: 30%;
 
         }
-        #search>form>input{
+
+        #search > form > input { /*轮播图搜索框样式*/
             border-radius: 5px;
             left: 20px;
-            width: 1000px;
+            width: 50%;
         }
-        img{/*图片浮动效果*/
+
+        img { /*图片浮动效果*/
             cursor: pointer;
             transition: all 0.6s;
 
         }
-        img:hover{/*鼠标移入图片浮动*/
+
+        img:hover { /*鼠标移入图片浮动*/
             transform: scale(1.1);
-            position:relative;
-            z-index:100;
+            position: relative;
+            z-index: 100;
 
         }
+
+        /*添加瀑布流相关样式*/
+        .grid-item {
+            width: 417px; /*设置每个元素的宽度为200*/
+            margin: 0 10px 10px 0;
+        }
+       #waterfall{
+           margin-top: 20px;
+       }
     </style>
 </head>
 <body>
@@ -83,7 +105,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <ul class="nav navbar-nav underline" >
+                <ul class="nav navbar-nav underline">
                     <li>
                         <a href="home" class="navbar-brand">
                             <img src="images/UnsplashLogo.png" alt="" width="180px">
@@ -93,7 +115,7 @@
                         <form action="home">
                             <input type="text" placeholder="Search free high-resolution photos" name="keyword">
                             <button type="button">
-                                <span class="fa fa-search" ></span>
+                                <span class="fa fa-search"></span>
                             </button>
                         </form>
                     </li>
@@ -112,7 +134,7 @@
                         </a>
                     </li>
                     <li>
-                            <h2>|</h2>
+                        <h2>|</h2>
                     </li>
                     <li class="home">
                         <a href=""><p>Login</p></a>
@@ -130,7 +152,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <ul class="nav navbar-nav underline" >
+                <ul class="nav navbar-nav underline">
                     <!--分类列表-->
                     <li>
                         <a href=""><p>Editorial</p></a>
@@ -202,57 +224,127 @@
         </div>
     </nav>
 </header>
+<section>
+    <div class="col-md-12">
 
-<section class="col-md-12">
+        <!--轮播图-->
+        <div id="myCarousel" class="carousel slide">
+            <!-- 轮播（Carousel）指标 -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <!-- 轮播（Carousel）项目 -->
+            <div class="carousel-inner" style="height: 600px">
+                <div class="item active" >
+                    <img src="images/kalei.jpg" alt="First slide">
+                    <div class="carousel-caption">标题 1</div>
+                </div>
+                <div class="item">
+                    <img src="images/kelly.jpg" alt="Second slide">
+                    <div class="carousel-caption">标题 2</div>
+                </div>
+                <div class="item">
+                    <img src="images/xps.jpg" alt="Third slide">
+                    <div class="carousel-caption">标题 3</div>
+                </div>
+            </div>
+            <!-- 轮播（Carousel）导航 -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div class="col-lg-12" id=search>
+            <h1 style="color: white;font-size: 50px;font-weight: bold">Unsplash</h1>
+            <p style="font-size: 16px;color: white">The internet’s source of <a href="" style="color: darkgray">freely-usable
+                images.</a></p>
+            <p style="font-size: 16px;color: white">Powered by creators everywhere.</p>
+            <form action="home">
+                <input type="text" placeholder="Search free high-resolution photos" name="keyword">
+                <button type="button">
+                    <span class="fa fa-search"></span>
+                </button>
+            </form>
 
-<!--轮播图-->
-<div id="myCarousel" class="carousel slide">
-    <!-- 轮播（Carousel）指标 -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <!-- 轮播（Carousel）项目 -->
-    <div class="carousel-inner">
-        <div class="item active">
-            <img src="images/kai.jpg" alt="First slide">
-            <div class="carousel-caption">标题 1</div>
         </div>
-        <div class="item">
-            <img src="images/kelly.jpg" alt="Second slide">
-            <div class="carousel-caption">标题 2</div>
-        </div>
-        <div class="item">
-            <img src="images/mario.jpg" alt="Third slide">
-            <div class="carousel-caption">标题 3</div>
-        </div>
-    </div>
-    <!-- 轮播（Carousel）导航 -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-    <div class="col-lg-12" id = search>
-        <h1 style="color: white">Unsplash</h1>
-        <p style="font-size: 16px">The internet’s source of freely-usable images.</p>
-        <p style="font-size: 16px">Powered by creators everywhere.</p>
-        <form action="home">
-            <input type="text" placeholder="Search free high-resolution photos" name="keyword">
-            <button type="button">
-                <span class="fa fa-search" ></span>
-            </button>
-        </form>
+        <!--轮播图结束-->
     </div>
 </section>
-
-
-
+<section id="waterfall">
+    <div class="col-md-9">
+        <!--瀑布流开始-->
+        <div class="grid">
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/andre.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/bernardh.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/docusignh.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/francescoh.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/lina.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/micheile.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/pascalh.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/surface.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/xps-2.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="zhang/5.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/kai.jpg" alt="">
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="">
+                    <img class="img-responsive" src="images/kelly.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!--瀑布流结束-->
+    </div>
+</section>
+</div>
 </body>
 <script type="text/javascript" src="bootstrap3/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap3/js/bootstrap.js"></script>
@@ -268,10 +360,19 @@
     /*轮播图开始移动*/
     $("#myCarousel").carousel("cycle");
     $("input:first").hover(function () {//鼠标移入
-        $(this).css("border","1px solid #DCDCDC");
-    },function () {
-        $(this).css("border","none");
+        $(this).css("border", "1px solid #DCDCDC");
+    }, function () {
+        $(this).css("border", "none");
     })
-
+    //瀑布流初始化代码
+    $(".grid").masonry({
+        itemSelector: ".grid-item", //告诉框架 选择器是什么
+        columnWidth: 442 //告诉框架 每个元素所占宽度(元素宽度+间距)
+    })
+    //图片加载完之后让瀑布流处理一下显示布局
+    $(".grid").imagesLoaded().progress(function () {
+        //此处代码图片加载完之后会执行
+        $(".grid").masonry("layout");//让瀑布流重新计算显示效果  解决图片层叠问题
+    });
 </script>
 </html>
